<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfilePage">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:id="@+id/profile_photo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:src="@color/colorAccent"/>

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@+id/profile_photo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/change_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/profile_username"
        android:layout_toRightOf="@+id/profile_photo"
        android:text="@string/change_profile_picture"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_signout"
        android:layout_below="@id/change_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_toRightOf="@+id/profile_photo"
        android:text="@string/signout"/>



</RelativeLayout>